# kurali

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build-deb-linux.yml  github-pages.yml  windows-build.yaml
coral/: CMakeLists.txt  Makefile
coral-electron/: main.js  package-lock.json  package.json
coral-electron/renderer/: config-helpers.js  dev.js  index.html  renderer.js
coral/conf/: config-windows.json
coral/scripts/: build.sh  collect-libs-.sh  collect-libs.sh  coral.desktop  create_deb_pkg.sh
coral/src/: Config.cpp  Config.h  InjectorThread.cpp  Logger.cpp  Makefile  TextEvent.h  TextUtils.cpp  TextUtils.h  TranscriberThread.cpp  UInputInjector.cpp  main.cpp  version.rc.in
coral/src/config/: Config.cpp  Config.h  ConfigReloadThread.cpp  ConfigReloadThread.h
coral/src/inject/: A11yInjector.cpp  A11yInjector.h  ClipboardOwner.cpp  ClipboardOwner.h  InjectorThread.cpp  InjectorThread.h  PushToTalkCmdEventThread.cpp  PushToTalkCmdEventThread.h  TextInjector.cpp  TextInjector.h  UInputInjector.cpp  UInputInjector.h  WaylandDetector.cpp  WaylandDetector.h  WaylandInjector.cpp  WaylandInjector.h  WaylandSession.cpp  WaylandSession.h  WindowsInjector.cpp  WindowsInjector.h  X11Injector.cpp  X11Injector.h  X11WindowUtils.cpp  X11WindowUtils.h
coral/src/perf/: AdaptiveThreadController.cpp  AdaptiveThreadController.h  Utils.cpp  Utils.h
coral/src/record/: AudioEvent.cpp  AudioEvent.h  ContinuousRecordEventThread.cpp  ContinuousRecordEventThread.h  DoubleTapDetectionFSM.cpp  DoubleTapDetectionFSM.h  DoubleTapKeyDetector.cpp  DoubleTapKeyDetector.h  KeyDetector.cpp  KeyDetector.h  PushToTalkRecordEventThread.cpp  PushToTalkRecordEventThread.h  Recorder.cpp  Recorder.h  RecorderEvent.h  RecorderQueue.h  RecorderThread.cpp  RecorderThread.h  RestartRecordEvent.cpp  RestartRecordEvent.h  StartRecordEvent.cpp  StartRecordEvent.h  StopRecordEvent.cpp  StopRecordEvent.h  ToggleRecordEvent.cpp  ToggleRecordEvent.h
coral/src/stats/: Logger.cpp  Logger.h  stderrSilencer.cpp  stderrSilencer.h  stdoutSilencer.cpp  stdoutSilencer.h
coral/src/transcribe/: Transcriber.cpp  Transcriber.h  TranscriberThread.h  concurrentQueue.h
coral/test/: TestInjectorThread.cpp  TestTextUtils.cpp
coral/test/config/: TestConfig.cpp  test_config.json
coral/test/inject/: TestA11yInjector.cpp  TestInjectorThread.cpp  TestTextInjector.cpp  TestWaylandInjector.cpp
coral/test/record/: TestAudioEvent.cpp  TestDoubleTapDetectionFSM.cpp  TestDoubleTapKeyDetector.cpp  TestKeyDetector.cpp  TestRecorderThread.cpp  test_AudioEvent.cpp
coral/test/transcribe/: TestConcurrentQueue.cpp  TestTextUtils.cpp  TestTranscriberThread.cpp  TestVocal.cpp  TestVocal.h  test_TestClass.cpp
docs/: coffee.html  index.html  speech_to_text_rewriting_research_paper_template.md
poc/coralV2/src/: config.json  main.cpp
poc/coralV3/: pkg
poc/coralV3/conf/: config.json
poc/coralV3/scripts/: postinstall.sh
poc/coralV3/src/: Makefile  main.cpp
website/: coffee.html  index.html  llmprompt  robots.txt  sitemap.xml  supabase-feedback.sql  supabase-mug.sql
